--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
     "postcss": "^8.4.8",
+    "postcss-combine-media-query": "^1.0.1",
+    "postcss-css-variables": "^0.18.0",
+    "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^3.0.23"
   }
 }
